--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
               <a
-                href="image/Horachanda resume.pdf"
+                href="image/Horachanda sabat resume.pdf"
                 download="Horachanda-sabat-CV"
                 style="text-decoration: none;color: #fff;"
                 >Download CV</a
